firebase authentication and routte protection added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   scoped_model: ^0.3.0
   http: ^0.11.3+17
+  shared_preferences: ^0.4.2
+  rxdart: ^0.18.1
 
 
 dev_dependencies:
